--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <div class="container" style="background-color: lightblue;">This is the left box colored in lightblue</div>
-    <div class="container" style="background-color: lightcoral;">This is the right box colored in lightcoral</div>
+    <table>
+        <tr>
+            <td class="leftbox">This is the left box colored in lightblue</td>
+            <td class="rightbox">This is the right box colored in lightcoral</td>
+        </tr>
+    </table>
 </body>
 </html>
