--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -5,26 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-        .container{
-            display: flex;
+        table {
+            width: 100%;
             height: 200px;
-            align-items: center;
-            padding-left: 10px;
             font-family: 'Century Gothic', sans-serif;
         }
+        td {
+            padding-left: 10px;
+            vertical-align: middle;
+        }
+        .leftbox {
+            background-color: lightblue;
+        }
+        .rightbox {
+            background-color: lightcoral;
+        }
         @media (max-width: 600px) {
-            body {
-                grid-template-columns: 1fr;
+            table {
+                width: 100%;
+            }
+            td {
+                display: block;
+                width: 100%;
+                box-sizing: border-box;
             }
         }
     </style>
 </head>
 <body>
-    <div class="container" style="background-color: lightblue;">This is the left box colored in lightblue</div>
-    <div class="container" style="background-color: lightcoral;">This is the right box colored in lightcoral</div>
+    <table>
+        <tr>
+            <td class="leftbox">This is the left box colored in lightblue</td>
+            <td class="rightbox">This is the right box colored in lightcoral</td>
+        </tr>
+    </table>
 </body>
 </html>
