--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -25,8 +25,10 @@
                 width: 100%;
             }
             td {
-                display: block;
+                display: flex;
                 width: 100%;
+                height: 200px;
+                align-items: center;
                 box-sizing: border-box;
             }
         }
