--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         table {
-            width: 100%;
-            height: 200px;
+            width: 100vw;
+            height: 100vh;
             font-family: 'Century Gothic', sans-serif;
         }
         td {
@@ -27,7 +27,7 @@
             td {
                 display: flex;
                 width: 100%;
-                height: 200px;
+                height: 100%;
                 align-items: center;
                 box-sizing: border-box;
             }
