--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-    
+    <div class="container">
+        <p>Menu: </p>
+        <select>
+            <option value="1">Sandwich</option>
+            <option value="2">Steak</option>
+            <option value="3">Spaghetti</option>
+        </select>
+    </div>
 </body>
 </html>
