--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Profile Card</title>
     <link rel="stylesheet" href="card.css">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <p>HSR Trailblazer</p>
+            <p style="font-weight: bold;">Professional Yapper</p>
+            <img src="https://i.redd.it/my-name-is-stelle-trailblazer-yo-by-qua-v0-8kfjypwnks6b1.jpg?width=3000&format=pjpg&auto=webp&s=a4097774f098a45889f82e0024467f490dfa7f1b" class="profile-pic">
         </div>
     </div>
     
