--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -8,11 +8,45 @@
 </head>
 <body>
     <div class="container">
+        <p class="title">Skibidi Profile</p>
         <div class="card">
-            <p style="font-weight: bold;">Professional Yapper</p>
-            <img src="https://i.redd.it/my-name-is-stelle-trailblazer-yo-by-qua-v0-8kfjypwnks6b1.jpg?width=3000&format=pjpg&auto=webp&s=a4097774f098a45889f82e0024467f490dfa7f1b" class="profile-pic">
+            <table class="content">
+                <tr>
+                    <td>
+                        <img src="https://i.redd.it/my-name-is-stelle-trailblazer-yo-by-qua-v0-8kfjypwnks6b1.jpg?width=3000&format=pjpg&auto=webp&s=a4097774f098a45889f82e0024467f490dfa7f1b" class="profile-pic" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p style="font-weight: bold; font-size: 20px;">jinphol</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p style="font-size: 16px;">I'm just a Professional Yapper</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="https://www.facebook.com/leizxqv">
+                            <img src="https://img.icons8.com/m_rounded/512/facebook-new.png">
+                        </a>
+                        <a href="https://www.instagram.com/cheristalyn/">
+                            <img src="https://w7.pngwing.com/pngs/258/274/png-transparent-computer-icons-instagram-black-riviera-instagram-logo-share-icon-black-instagram-thumbnail.png">
+                        </a>
+                        <a href="https://www.twitch.tv/zeneryx">
+                            <img src="https://www.iconpacks.net/icons/2/free-twitch-icon-2178-thumb.png">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button type="button" onclick ="alert('Why did you click me?!')">Contact</button>
+                    </td>
+                </tr>
+            </table>
+            
         </div>
     </div>
-    
 </body>
 </html>
