--- a/rush/src/jinphol.html
+++ b/rush/src/jinphol.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <section class="min-h-screen flex flex-col items-center justify-center px-4 pt-16 text-center">
       <!-- Profile Picture -->
-      <img src="../pictures/cherrine_profile.jpg" 
+      <img src="pictures/cherrine_profile.jpg" 
           class="w-64 h-64w-64 rounded-full border-4 border-cyan-400 shadow-lg mb-4">
       
       <!-- Hero Text -->
@@ -106,7 +106,7 @@
                 <div class="bg-slate-700 rounded-lg overflow-hidden relative">
 
                   <div class="relative group">
-                      <img id="projectImage" src="../pictures/bot-profile.jpg" class="h-48 w-full object-cover transition-opacity duration-300">
+                      <img id="projectImage" src="pictures/bot-profile.jpg" class="h-48 w-full object-cover transition-opacity duration-300">
                   </div>
 
                   <div class="p-6">
@@ -121,7 +121,7 @@
                 <div class="bg-slate-700 rounded-lg overflow-hidden relative">
 
                 <div class="relative group">
-                    <img id="projectImage" src="../pictures/ginkhaoyang.png" class="h-48 w-full object-cover transition-opacity duration-300">
+                    <img id="projectImage" src="pictures/ginkhaoyang.png" class="h-48 w-full object-cover transition-opacity duration-300">
                 </div>
                 <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Ginkhaoyang</h3>
@@ -135,7 +135,7 @@
                 <div class="bg-slate-700 rounded-lg overflow-hidden relative">
 
                     <div class="relative group">
-                        <img id="projectImage" src="../pictures/poster_project.png" class="h-48 w-full object-cover transition-opacity duration-300">
+                        <img id="projectImage" src="pictures/poster_project.png" class="h-48 w-full object-cover transition-opacity duration-300">
                     </div>
                     
                     <div class="p-6">
