--- a/rush/src/landingpage.html
+++ b/rush/src/landingpage.html
@@ -22,7 +22,7 @@
                 <h1 class="font-sans text-3xl font-bold mb-4"><span class="text-cyan-400">jinphol</span>'s profile</h1>
                 <p class="text-xl text-gray-400 mb-8">Jeerapichsinee Inphol</p>
                 <div class="space-x-4">
-                    <a href="view/jinphol.html" class="border border-cyan-500 hover:bg-cyan-500/10 px-6 py-3 rounded-lg inline-block transition-colors">View</a>
+                    <a href="jinphol.html" class="border border-cyan-500 hover:bg-cyan-500/10 px-6 py-3 rounded-lg inline-block transition-colors">View</a>
                 </div>
             </div>
 
@@ -32,7 +32,7 @@
                 <h1 class="font-sans text-3xl font-bold mb-4"><span class="text-cyan-400">pminchar</span>'s profile</h1>
                 <p class="text-xl text-gray-400 mb-8">Peerach Mincharoen</p>
                 <div class="space-x-4">
-                    <a href="view/pminchar.html" class="border border-cyan-500 hover:bg-cyan-500/10 px-6 py-3 rounded-lg inline-block transition-colors">View</a>
+                    <a href="pminchar.html" class="border border-cyan-500 hover:bg-cyan-500/10 px-6 py-3 rounded-lg inline-block transition-colors">View</a>
                 </div>
             </div>
         </div>
