--- a/rush/src/pminchar.html
+++ b/rush/src/pminchar.html
@@ -31,7 +31,7 @@
                 
             </div>
             <div class="img-div">
-                <img src="../pictures/pic.jpg" alt="">
+                <img src="pictures/pic.jpg" alt="">
             </div>
         </div>
         
