--- a/rush/src/landingpage.html
+++ b/rush/src/landingpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,17 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
+
 <body class="bg-slate-900 text-gray-100">
 
     <!-- Hero Section -->
     <section class="min-h-screen flex flex-col items-center justify-center px-4 pt-30 text-center">
-        <h1 class="font-sans text-5xl font-bold mb-9 ">Welcome to our <span class="text-cyan-400">Portfolio</span></h1>
+        <h1 class="font-sans text-4xl md:text-5xl font-bold mb-9">Welcome to our <span class="text-cyan-400">Portfolio</span></h1>
         
         <!-- Flexbox container for profiles -->
-        <div class="flex justify-center space-x-8">
+        <div class="flex flex-col md:flex-row justify-center space-y-8 md:space-x-8 md:space-y-0">
             <div class="text-center">
-                <img src="pictures/cherrine_profile.jpg" 
-                    class="w-64 h-64 rounded-full border-4 border-cyan-400 shadow-lg mb-4">
+                <img src="pictures/cherrine_profile.jpg" class="w-64 h-64 rounded-full border-4 border-cyan-400 shadow-lg mb-4">
                 <h1 class="font-sans text-3xl font-bold mb-4"><span class="text-cyan-400">jinphol</span>'s profile</h1>
                 <p class="text-xl text-gray-400 mb-8">Jeerapichsinee Inphol</p>
                 <div class="space-x-4">
@@ -27,8 +28,7 @@
             </div>
 
             <div class="text-center">
-                <img src="pictures/pic.jpg" 
-                    class="w-64 h-64 rounded-full border-4 border-cyan-400 shadow-lg mb-4">
+                <img src="pictures/pic.jpg" class="w-64 h-64 rounded-full border-4 border-cyan-400 shadow-lg mb-4">
                 <h1 class="font-sans text-3xl font-bold mb-4"><span class="text-cyan-400">pminchar</span>'s profile</h1>
                 <p class="text-xl text-gray-400 mb-8">Peerach Mincharoen</p>
                 <div class="space-x-4">
@@ -44,4 +44,5 @@
         </div>
     </footer>
 </body>
+
 </html>
